Added IPDPS submitted paper and 2013 posters

--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,30 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-10-28 03:29:47 -0500 
+%% Created for Evan Bollig at 2013-10-30 09:26:21 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{BolligXpo2013,
+	Author = {Bollig, E. F.},
+	Date-Added = {2013-10-30 14:25:29 +0000},
+	Date-Modified = {2013-10-30 14:26:19 +0000},
+	Howpublished = {Poster. FSU Dept. of Sci. Comp. Computational Xpo. Tallahassee, FL},
+	Month = {March},
+	Title = {{RBF-generated Finite Differences for Elliptic PDEs on Multiple GPUs}},
+	Year = {2013}}
+
+@unpublished{ErlebacherSauleFlyerBollig2013,
+	Author = {Gordon Erlebacher AND Erik Saule AND Natasha Flyer AND Evan Bollig},
+	Date-Added = {2013-10-30 14:17:21 +0000},
+	Date-Modified = {2013-10-30 14:24:15 +0000},
+	Month = {October},
+	Note = {Submitted to IEEE Parallel & Distributed Processing Symposium (IPDPS), 2014},
+	Title = {{Sparse Matrix Vector Multiplication with Multiple vectors and Multiple Matrices on the MIC Architecture}},
+	Year = {2013}}
 
 @misc{M2090,
 	Author = {NVIDIA},
