--- a/latex/publications.tex
+++ b/latex/publications.tex
@@ -14,15 +14,15 @@
 
 
 \begin{itemize} 
+        \item \bibentry{ErlebacherSauleFlyerBollig2013}
         \item \bibentry{BolligFlyerErlebacher2012}
         \item \bibentry{BolligFlyerErlebacher2012b}
         \item \bibentry{BolligSIAMSEAS2012}     
+        \item \bibentry{BolligXpo2013}. Also presented at: the Minnesota Supercomputing Institute Research Exhibition, Minneapolis, MN, April 2013
         \item \bibentry{BolligXpo2012}
         \item \bibentry{BolligAGU2011}              
         \item \bibentry{BolligMA2011}
 \end{itemize}
-%TODO: add survey of goals stated in prospectus and whether they were completed or not (Probably part of slides, not actual dissertation)
-
 
 
 
