--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,59 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-10-30 09:26:21 -0500 
+%% Created for Evan Bollig at 2013-10-30 10:11:23 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{YokotaGPU2010,
+	Author = {Rio Yokota and Tsuyoshi Hamada and Jaydeep P. Bardhan and Matthew G. Knepley and Lorena A. Barba},
+	Bibsource = {DBLP, http://dblp.uni-trier.de},
+	Date-Added = {2013-10-30 15:07:27 +0000},
+	Date-Modified = {2013-10-30 15:07:27 +0000},
+	Ee = {http://arxiv.org/abs/1007.4591},
+	Journal = {CoRR},
+	Title = {Biomolecular Electrostatics Simulation by an FMM-based BEM on 512 GPUs},
+	Volume = {abs/1007.4591},
+	Year = {2010}}
+
+@article{Minden2010,
+	Author = {Minden, V. and Smith, B.F. and Knepley, M.G.},
+	Date-Added = {2013-10-30 15:04:25 +0000},
+	Date-Modified = {2013-10-30 15:04:42 +0000},
+	Journal = {Proceedings of the 2010 International Workshop of GPU Solutions to Multiscale Problems in Science and Engineering},
+	Title = {Preliminary implementation of PETSc using GPUs},
+	Year = {2010}}
+
+@misc{petsc-web-page,
+	Author = {Satish Balay and Jed Brown and Kris Buschelman and William D. Gropp and Dinesh Kaushik and Matthew G. Knepley and Lois Curfman McInnes and Barry F. Smith and Hong Zhang},
+	Date-Added = {2013-10-30 15:02:59 +0000},
+	Date-Modified = {2013-10-30 15:02:59 +0000},
+	Note = {http://www.mcs.anl.gov/petsc},
+	Title = {{PETSc} {W}eb page},
+	Year = {2013}}
+
+@techreport{petsc-user-ref,
+	Author = {Satish Balay and Jed Brown and and Kris Buschelman and Victor Eijkhout and William D. Gropp and Dinesh Kaushik and Matthew G. Knepley and Lois Curfman McInnes and Barry F. Smith and Hong Zhang},
+	Date-Added = {2013-10-30 15:02:59 +0000},
+	Date-Modified = {2013-10-30 15:02:59 +0000},
+	Institution = {Argonne National Laboratory},
+	Number = {ANL-95/11 - Revision 3.4},
+	Title = {{PETS}c Users Manual},
+	Year = {2013}}
+
+@inproceedings{petsc-efficient,
+	Author = {Satish Balay and William D. Gropp and Lois Curfman McInnes and Barry F. Smith},
+	Booktitle = {Modern Software Tools in Scientific Computing},
+	Date-Added = {2013-10-30 15:02:59 +0000},
+	Date-Modified = {2013-10-30 15:02:59 +0000},
+	Editor = {E. Arge and A. M. Bruaset and H. P. Langtangen},
+	Pages = {163--202},
+	Publisher = {Birkh{\"{a}}user Press},
+	Title = {Efficient Management of Parallelism in Object Oriented Numerical Software Libraries},
+	Year = {1997}}
 
 @misc{BolligXpo2013,
 	Author = {Bollig, E. F.},
