--- a/latex/multigpu_rbffd.tex
+++ b/latex/multigpu_rbffd.tex
@@ -51,7 +51,7 @@ Overlapping communication and GPU computation is enabled by two levels of asynch
 \caption{GPU and MPI\_Isend/MPI\_Irecv (Overlapping)}
 \label{fig:overlap_gpu}
 \end{subfigure}
-\caption{Overlapping GPU kernels with CPU managed communication. } 
+\caption{Overlapping GPU kernels with CPU managed communication. Task block sizes are not drawn to scale.} 
 \label{fig:gpu_mpi_tuning}
 \end{figure}
 
