--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,70 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-10-30 10:11:23 -0500 
+%% Created for Evan Bollig at 2013-10-30 23:06:39 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Ingber2003,
+	Author = {Ingber, M. S. and Schmidt, C. C. and Tanski, J. A. and Phillips, J.},
+	Date-Added = {2013-10-31 03:41:12 +0000},
+	Date-Modified = {2013-10-31 03:41:12 +0000},
+	Doi = {10.1080/713836344},
+	Eprint = {http://www.tandfonline.com/doi/pdf/10.1080/713836344},
+	Journal = {Numerical Heat Transfer, Part B: Fundamentals},
+	Number = {2},
+	Pages = {145-164},
+	Title = {BOUNDARY-ELEMENT ANALYSIS OF 3-D DIFFUSION PROBLEMS USING A PARALLEL DOMAIN DECOMPOSITION METHOD},
+	Url = {http://www.tandfonline.com/doi/abs/10.1080/713836344},
+	Volume = {44},
+	Year = {2003},
+	Bdsk-Url-1 = {http://www.tandfonline.com/doi/abs/10.1080/713836344},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1080/713836344}}
+
+@inproceedings{Strey2003,
+	Added-At = {2005-02-07T00:00:00.000+0100},
+	Author = {Strey, Alfred},
+	Biburl = {http://www.bibsonomy.org/bibtex/2d2621ceb53020bbc89190b6364393e9d/dblp},
+	Booktitle = {PARCO},
+	Crossref = {conf/parco/2003},
+	Date = {2005-02-07},
+	Date-Added = {2013-10-31 03:15:18 +0000},
+	Date-Modified = {2013-10-31 03:15:48 +0000},
+	Description = {dblp},
+	Editor = {Joubert, Gerhard R. and Nagel, Wolfgang E. and Peters, Frans J. and Walter, Wolfgang V.},
+	Interhash = {a74dbd5730605eca6f0dc5ef07f7123c},
+	Intrahash = {d2621ceb53020bbc89190b6364393e9d},
+	Isbn = {0-444-51689-1},
+	Keywords = {dblp},
+	Pages = {201-208},
+	Publisher = {Elsevier},
+	Series = {Advances in Parallel Computing},
+	Timestamp = {2005-02-07T00:00:00.000+0100},
+	Title = {A comparison of OpenMP and MPI for neural network simulations on a SunFire 6800.},
+	Url = {http://dblp.uni-trier.de/db/conf/parco/parco2003.html#Strey03},
+	Volume = 13,
+	Year = 2003,
+	Bdsk-Url-1 = {http://dblp.uni-trier.de/db/conf/parco/parco2003.html#Strey03}}
+
+@article{Ingber2004,
+	Author = {Ingber, M. S. and Chen, C. S. and Tanski, J. A.},
+	Date-Added = {2013-10-31 03:11:51 +0000},
+	Date-Modified = {2013-10-31 03:11:51 +0000},
+	Doi = {10.1002/nme.1043},
+	Issn = {1097-0207},
+	Journal = {International Journal for Numerical Methods in Engineering},
+	Keywords = {method of fundamental solutions, dual reciprocity method, radial basis functions, parallel domain decomposition, Schwarz Neumann--Neumann iteration, polyharmonic splines, diffusion equation},
+	Number = {13},
+	Pages = {2183--2201},
+	Publisher = {John Wiley & Sons, Ltd.},
+	Title = {A mesh free approach using radial basis functions and parallel domain decomposition for solving three-dimensional diffusion equations},
+	Url = {http://dx.doi.org/10.1002/nme.1043},
+	Volume = {60},
+	Year = {2004},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1002/nme.1043}}
 
 @article{YokotaGPU2010,
 	Author = {Rio Yokota and Tsuyoshi Hamada and Jaydeep P. Bardhan and Matthew G. Knepley and Lorena A. Barba},
