--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,29 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-10-30 23:06:39 -0500 
+%% Created for Evan Bollig at 2013-10-31 00:12:03 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Divo2005,
+	Author = {Eduardo Divo and Alain J. Kassab},
+	Date-Added = {2013-10-31 05:11:53 +0000},
+	Date-Modified = {2013-10-31 05:11:58 +0000},
+	Doi = {http://dx.doi.org/10.1016/j.enganabound.2004.10.001},
+	Issn = {0955-7997},
+	Journal = {Engineering Analysis with Boundary Elements},
+	Keywords = {Heat transfer},
+	Number = {2},
+	Pages = {136 - 149},
+	Title = {A meshless method for conjugate heat transfer problems},
+	Url = {http://www.sciencedirect.com/science/article/pii/S0955799704001584},
+	Volume = {29},
+	Year = {2005},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0955799704001584},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1016/j.enganabound.2004.10.001}}
 
 @article{Ingber2003,
 	Author = {Ingber, M. S. and Schmidt, C. C. and Tanski, J. A. and Phillips, J.},
