--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -157,14 +157,14 @@ This work leverages a domain decomposition; although, not for the purpose of con
          % Use a star or cross to denote OpenMP + MPI. 
                                     & \multicolumn{2}{C{0.2\textwidth}|}{Multi-CPU ($^\star$:MPI+OpenMP)} & \multicolumn{3}{C{0.3\textwidth}|}{Single GPU} & \multicolumn{2}{C{0.2\textwidth}|}{Multi-GPU ($^\dag$:Non-overlapped, $^\ddag$:Overlapped)} \\ \cline{2-8}
                                     & OpenMP & MPI & CUDA     & OpenCL     & Other     & CUDA     & OpenCL   \\ \hline
-             RBF-FD                 &            &         &          &            &            &          & \cite{BolligFlyerErlebacher2012}$^{\dag,\ddag}$  \\ \hline
-             RBF PDE Methods  &  \cite{Kosec2008}   & \cite{Divo2007, Ingber2003,Ingber2004,Yokota2010} & \cite{Schmidt2009a,Schmidt2009b,Gumerov2007a, Gumerov2007b} &    &   &   &  \\ \hline
+             RBF-FD                 &            &         &          &            &            &          & \cite{BolligFlyerErlebacher2012}$^{\dag}$, [This Work]$^{\ddag}$  \\ \hline
+             RBF PDE Methods  &  \cite{Kosec2008}   & \cite{Divo2005, Divo2007, Ingber2003,Ingber2004,Yokota2010} & \cite{Schmidt2009a,Schmidt2009b,Gumerov2007a, Gumerov2007b} &    &   &   &  \\ \hline
              Non-PDE RBF Methods    &         &    \cite{Strey2003}$^{\star}$      &  \cite{Cuomo2013,Cuntz2007}  &   &  \cite{Corrigan2005,Weiler2005,Carr2003,Brandstetter2008}  &   &      \\ \hline
-             Non-RBF PDE Methods    &     &   \cite{Schubert2011}$^{\star}$    &   \cite{Minden2010}    &      &      &   \cite{Goeddeke2007,Goeddeke2008a,Goeddeke2009a, Goeddeke2008b, Thibault2009, Phillips2009, Corrigan2009, YokotaGPU2010}$^{\dag}$ &  \\ \hline
+             Non-RBF PDE Methods    &     &   \cite{Schubert2011}$^{\star}$    &         &      &      &   \cite{Goeddeke2007,Goeddeke2008a,Goeddeke2009a, Goeddeke2008b, Thibault2009, Phillips2009, Corrigan2009, Minden2010, YokotaGPU2010}$^{\dag}$ &  \\ \hline
     \end{tabular}
 \end{table}
 
-\subsection{Multi-CPU}
+\subsection{RBF Methods on Multi-Core and Multi-CPU}
 
 Kosec and \v{S}arler \cite{Kosec2008} have the only known (to our knowledge) OpenMP implementation for RBF PDE methods. The authors parallelize coupled heat transfer 
 and fluid flow problems on a single workstation. 
@@ -176,11 +176,12 @@ The performance and scaling of a parallel RBF neural network is tested on a SunF
 
 Global RBF collocation method is parallelized in \cite{Ingber2003,Ingber2004} using a Schwarz Neumann-Neumann domain decomposition method to solve 3-D diffusion equations. In both cases the authors utilize MPI for communication and provide only coarse grained scaling data for 8, 27 and 64 nodes. 
  
-In 2007, Divo and Kassab \cite{Divo2007} used a domain decomposition method with artificial 
-subdomain boundaries for their implementation of a local collocation method \cite{Divo2007}. 
-The subdomains are processed independently, with derivative values 
-at artificial boundary points averaged to maintain global consistency of physical values. Their implementation 
-was designed for a 36 node cluster, but benchmarks and scalability tests are not provided.
+ 
+Divo and Kassab \cite{Divo2005} develop a domain decomposition method with artificial 
+subdomain boundaries and parallelize global RBF collocation across a small cluster of 10 compute nodes. Subdomains are processed independently, with derivative values 
+at artificial boundary points averaged to maintain global consistency of physical values. The authors focus predominantly on verification of the decomposition method for heat transfer problems, and neglect thorough benchmarking and scalability testing for the MPI implementation. In \cite{Divo2007}, Divo and Kassab apply their domain decomposition to parallelize a local RBF collocation method. The method
+was run on 36 node cluster, but once again benchmarks and scalability tests are not provided. 
+
 
 Perhaps the most competitive parallel implementation of an RBF method is the PetRBF branch of PETSc \cite{Yokota2010}. The authors of PetRBF have implemented a highly scalable, efficient RBF interpolation method based on compact RBFs (i.e., they operate on sparse matrices). The authors demonstrate efficient weak scaling of PetRBF across 1024 processes on a Blue Gene/L, and strong scaling up to 128 processes on the same hardware. On the Blue Gene/L, PetRBF is demonstrated to achieve an impressive 74\% parallel weak scaling efficiency on 1024 processes (operating on over 50 million points), and 84\% strong scaling efficiency for 128 processes. Strong scaling was also tested on a Cray XT4, where strong scaling tops out at 36\% for 128 processes, a respectable number---and similar to observed results for our own code on for the same number of processes (see Chapter~\ref{chap:distributed_rbffd}).  
 
@@ -210,7 +211,9 @@ Earlier this year (2013), Cuomo et al. \cite{Cuomo2013} implemented RBF-interpol
 Aside from our own investigations, no known efforts have applied the GPU to the RBF-FD method. 
 
 
-\subsection{Non-RBF Methods on GPUs} 
+\subsection{Non-RBF Methods} 
+
+To provide a sense of context in which this project developed, we now turn to non-RBF related work on multi-CPU and multi-GPU. 
 
 In many cases competition may appear to be more sophisticated. All related work was based on existing code bases that were optimized \authnote{complete}
 
